fix: `letter-spacing` prop not defined for headings (refs SFKUI-7636)

--- a/src/style/_typography.scss
+++ b/src/style/_typography.scss
@@ -18,24 +18,28 @@ h1 {
     font-size: var(--f-font-size-h1);
     font-weight: var(--docs-heading-font-weight-h1);
     color: var(--f-text-color-heading-1);
+    letter-spacing: var(--docs-heading-letter-spacing-h1);
 }
 
 h2 {
     font-size: var(--f-font-size-h2);
     font-weight: var(--docs-heading-font-weight-h2);
     color: var(--f-text-color-heading-2);
+    letter-spacing: var(--docs-heading-letter-spacing-h2);
 }
 
 h3 {
     font-size: var(--f-font-size-h3);
     font-weight: var(--docs-heading-font-weight-h3);
     color: var(--f-text-color-heading-3);
+    letter-spacing: var(--docs-heading-letter-spacing-h3);
 }
 
 h4 {
     font-size: var(--f-font-size-h4);
     font-weight: var(--docs-heading-font-weight-h4);
     color: var(--f-text-color-heading-4);
+    letter-spacing: var(--docs-heading-letter-spacing-h4);
 }
 
 h5 {
